fixed mobile and desktop views so image is actually legible

--- a/test/style.css
+++ b/test/style.css
@@ -9,6 +9,8 @@ body {
     height: 100vh;
     width: 100%;
     display: none;
+    flex-direction: column;
+    align-items: center;
 }
 
 header {
@@ -86,6 +88,7 @@ header {
 
 .contact {
     height: 100px;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -103,7 +106,7 @@ header {
     color: white;
 }
 
-@media (min-width: 320px) and (max-width:480px) {
+@media (max-width:719px) {
 
     * {
         font-size: 14px;
@@ -115,5 +118,26 @@ header {
 
     h1 {
         font-size: 20px;
+    }
+    .contact ul{
+        flex-direction: column;
+        text-align: center; 
+        margin: 5px 0;
+    } .contact ul li {
+        margin: 5px 0;
+    }
+}
+
+@media (min-width: 720px) {
+    .sm-container, .container {
+        width: 70%; 
+    }
+
+    .image {
+        width: 30%;
+    }
+
+    .content {
+        width: 70%;
     }
 }
